@@ -5,6 +5,7 @@
         - Fixed an issue where the first host type was selected when editing a host instead of the actual type.
         - Performance improvements in both the DB and a handful of pages.
         - Fixed an issue with highlighting being the same colour as the text for matching server aliases in ReverseProxy.
+        - Deleted configs are now correctly purged from Git.
 2.0.1   - Clarified RMin/RMax in IP Sweep.
 		- Fixed an issue with Redirects overruling each other.
         - Dropped legacy IP entry in Distribution Status.
